# ga4_clustering

./: .gitignore  README.md  export_assets.py  pyproject.toml  requirements.txt  run.py
results/: report.html
results/clusters/: binary_k3_cluster1.csv  binary_k5_cluster0.csv  binary_k5_cluster1.csv  binary_k5_cluster3.csv  binary_k5_cluster4.csv  tf_k3_cluster2.csv  tf_k5_cluster0.csv  tf_k5_cluster1.csv  tf_k5_cluster2.csv  tf_k5_cluster3.csv  tf_k5_cluster4.csv  tfidf_k5_cluster0.csv  tfidf_k5_cluster1.csv  tfidf_k5_cluster2.csv  tfidf_k5_cluster3.csv  tfidf_k5_cluster4.csv
results/matrices/: binary.csv  tf.csv  tfidf.csv
results/sublogs/: binary_k5_cluster0_events.csv  tfidf_k5_cluster4_events.csv
src/: cluster.py  load.py  matrices.py  preprocess.py  report.py
