[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ga4-clustering"
version = "0.1.0"
description = "Trace clustering de sessões GA4 usando matrizes de transição"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.scripts]
ga4-clustering = "ga4_clustering.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ga4_clustering*"]
